{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 547,
  "lineage": "382bd6d3-49e6-ffdc-f664-0336a61dbf2d",
  "resources": [
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:589736534170:vpc/vpc-7231d814",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-7d159116",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-bf1dfdd9",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-7231d814",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-bd90eddb",
            "owner_id": "589736534170",
            "region": "ap-southeast-1",
            "tags": {
              "Name": "default-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "ecs_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:589736534170:loadbalancer/app/ecs-demo-alb/bd102969d4e4a194",
            "arn_suffix": "app/ecs-demo-alb/bd102969d4e4a194",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "ecs-demo-alb-1025213947.ap-southeast-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:589736534170:loadbalancer/app/ecs-demo-alb/bd102969d4e4a194",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "ecs-demo-alb",
            "preserve_host_header": false,
            "region": "ap-southeast-1",
            "security_groups": [
              "sg-0f6668e3c9f805bad"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0b4e8c43"
              },
              {
                "subnet_id": "subnet-ba1198e3"
              },
              {
                "subnet_id": "subnet-c6924fa0"
              }
            ],
            "subnets": [
              "subnet-0b4e8c43",
              "subnet-ba1198e3",
              "subnet-c6924fa0"
            ],
            "tags": {
              "CostCenter": "demo-stage",
              "Environment": "demo",
              "Name": "ecs-demo-alb",
              "Project": "ecs-fargate-demo"
            },
            "tags_all": {
              "CostCenter": "demo-stage",
              "Environment": "demo",
              "Name": "ecs-demo-alb",
              "Project": "ecs-fargate-demo"
            },
            "vpc_id": "vpc-7231d814",
            "xff_header_processing_mode": "append",
            "zone_id": "Z1LMS91P8CMLE5"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:589736534170:loadbalancer/app/ecs-demo-alb/bd102969d4e4a194"
          },
          "dependencies": [
            "aws_security_group.ecs_sg",
            "data.aws_subnets.default",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "ecs_http_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:589736534170:listener/app/ecs-demo-alb/bd102969d4e4a194/ce671503b8c63bfd",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:589736534170:listener/app/ecs-demo-alb/bd102969d4e4a194/ce671503b8c63bfd",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:589736534170:loadbalancer/app/ecs-demo-alb/bd102969d4e4a194",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "ap-southeast-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {
              "Environment": "demo",
              "Name": "ecs-demo-listener",
              "Project": "ecs-fargate-demo"
            },
            "tags_all": {
              "Environment": "demo",
              "Name": "ecs-demo-listener",
              "Project": "ecs-fargate-demo"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:589736534170:listener/app/ecs-demo-alb/bd102969d4e4a194/ce671503b8c63bfd"
          },
          "dependencies": [
            "aws_lb.ecs_alb",
            "aws_security_group.ecs_sg",
            "data.aws_subnets.default",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "ecs_https_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:589736534170:listener/app/ecs-demo-alb/bd102969d4e4a194/a9ad5c3101412a9e",
            "certificate_arn": "arn:aws:acm:ap-southeast-1:589736534170:certificate/24a35fd9-0539-4d78-910e-76c4091944ba",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [
                  {
                    "content_type": "text/plain",
                    "message_body": "Not Found",
                    "status_code": "404"
                  }
                ],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "",
                "type": "fixed-response"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:589736534170:listener/app/ecs-demo-alb/bd102969d4e4a194/a9ad5c3101412a9e",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:589736534170:loadbalancer/app/ecs-demo-alb/bd102969d4e4a194",
            "mutual_authentication": [
              {
                "advertise_trust_store_ca_names": "",
                "ignore_client_certificate_expiry": false,
                "mode": "off",
                "trust_store_arn": ""
              }
            ],
            "port": 443,
            "protocol": "HTTPS",
            "region": "ap-southeast-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": "",
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": "",
            "routing_http_request_x_amzn_tls_version_header_name": "",
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "tags": {
              "Environment": "demo",
              "Name": "ecs-demo-https-listener",
              "Project": "ecs-fargate-demo"
            },
            "tags_all": {
              "Environment": "demo",
              "Name": "ecs-demo-https-listener",
              "Project": "ecs-fargate-demo"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:589736534170:listener/app/ecs-demo-alb/bd102969d4e4a194/a9ad5c3101412a9e"
          },
          "dependencies": [
            "aws_acm_certificate.alb_cert",
            "aws_acm_certificate_validation.alb_cert_validation",
            "aws_lb.ecs_alb",
            "aws_route53_record.alb_cert_validation",
            "aws_security_group.ecs_sg",
            "data.aws_subnets.default",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ashtra",
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:589736534170:targetgroup/tg-ashtra/d27ffd423059a1c3",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:589736534170:listener-rule/app/ecs-demo-alb/bd102969d4e4a194/a9ad5c3101412a9e/c64e48ae4364c1b3",
            "condition": [
              {
                "host_header": [
                  {
                    "values": [
                      "ashtra.less.awssolutionsprovider.com"
                    ]
                  }
                ],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:589736534170:listener-rule/app/ecs-demo-alb/bd102969d4e4a194/a9ad5c3101412a9e/c64e48ae4364c1b3",
            "listener_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:589736534170:listener/app/ecs-demo-alb/bd102969d4e4a194/a9ad5c3101412a9e",
            "priority": 100,
            "region": "ap-southeast-1",
            "tags": {
              "Environment": "demo",
              "Name": "ecs-demo-listener-rules",
              "Project": "ecs-fargate-demo"
            },
            "tags_all": {
              "Environment": "demo",
              "Name": "ecs-demo-listener-rules",
              "Project": "ecs-fargate-demo"
            }
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:589736534170:listener-rule/app/ecs-demo-alb/bd102969d4e4a194/a9ad5c3101412a9e/c64e48ae4364c1b3"
          },
          "dependencies": [
            "aws_acm_certificate.alb_cert",
            "aws_acm_certificate_validation.alb_cert_validation",
            "aws_lb.ecs_alb",
            "aws_lb_listener.ecs_https_listener",
            "aws_lb_target_group.tg",
            "aws_route53_record.alb_cert_validation",
            "aws_security_group.ecs_sg",
            "data.aws_subnets.default",
            "data.aws_vpc.default"
          ]
        },
        {
          "index_key": "dash",
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:589736534170:targetgroup/tg-dash/bcb465942a0bc1e7",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:589736534170:listener-rule/app/ecs-demo-alb/bd102969d4e4a194/a9ad5c3101412a9e/aa5f84ff3b32c7f4",
            "condition": [
              {
                "host_header": [
                  {
                    "values": [
                      "dash.less.awssolutionsprovider.com"
                    ]
                  }
                ],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:589736534170:listener-rule/app/ecs-demo-alb/bd102969d4e4a194/a9ad5c3101412a9e/aa5f84ff3b32c7f4",
            "listener_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:589736534170:listener/app/ecs-demo-alb/bd102969d4e4a194/a9ad5c3101412a9e",
            "priority": 101,
            "region": "ap-southeast-1",
            "tags": {
              "Environment": "demo",
              "Name": "ecs-demo-listener-rules",
              "Project": "ecs-fargate-demo"
            },
            "tags_all": {
              "Environment": "demo",
              "Name": "ecs-demo-listener-rules",
              "Project": "ecs-fargate-demo"
            }
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:589736534170:listener-rule/app/ecs-demo-alb/bd102969d4e4a194/a9ad5c3101412a9e/aa5f84ff3b32c7f4"
          },
          "dependencies": [
            "aws_acm_certificate.alb_cert",
            "aws_acm_certificate_validation.alb_cert_validation",
            "aws_lb.ecs_alb",
            "aws_lb_listener.ecs_https_listener",
            "aws_lb_target_group.tg",
            "aws_route53_record.alb_cert_validation",
            "aws_security_group.ecs_sg",
            "data.aws_subnets.default",
            "data.aws_vpc.default"
          ]
        },
        {
          "index_key": "httpd",
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:589736534170:targetgroup/tg-httpd/0b1fb352a360e14c",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:589736534170:listener-rule/app/ecs-demo-alb/bd102969d4e4a194/a9ad5c3101412a9e/0c35a85663862f89",
            "condition": [
              {
                "host_header": [
                  {
                    "values": [
                      "httpd.less.awssolutionsprovider.com"
                    ]
                  }
                ],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:589736534170:listener-rule/app/ecs-demo-alb/bd102969d4e4a194/a9ad5c3101412a9e/0c35a85663862f89",
            "listener_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:589736534170:listener/app/ecs-demo-alb/bd102969d4e4a194/a9ad5c3101412a9e",
            "priority": 102,
            "region": "ap-southeast-1",
            "tags": {
              "Environment": "demo",
              "Name": "ecs-demo-listener-rules",
              "Project": "ecs-fargate-demo"
            },
            "tags_all": {
              "Environment": "demo",
              "Name": "ecs-demo-listener-rules",
              "Project": "ecs-fargate-demo"
            }
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:589736534170:listener-rule/app/ecs-demo-alb/bd102969d4e4a194/a9ad5c3101412a9e/0c35a85663862f89"
          },
          "dependencies": [
            "aws_acm_certificate.alb_cert",
            "aws_acm_certificate_validation.alb_cert_validation",
            "aws_lb.ecs_alb",
            "aws_lb_listener.ecs_https_listener",
            "aws_lb_target_group.tg",
            "aws_route53_record.alb_cert_validation",
            "aws_security_group.ecs_sg",
            "data.aws_subnets.default",
            "data.aws_vpc.default"
          ]
        },
        {
          "index_key": "nginx",
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:589736534170:targetgroup/tg-nginx/9ab6f4050d045963",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:589736534170:listener-rule/app/ecs-demo-alb/bd102969d4e4a194/a9ad5c3101412a9e/22ccddc251e8c9aa",
            "condition": [
              {
                "host_header": [
                  {
                    "values": [
                      "nginx.less.awssolutionsprovider.com"
                    ]
                  }
                ],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:589736534170:listener-rule/app/ecs-demo-alb/bd102969d4e4a194/a9ad5c3101412a9e/22ccddc251e8c9aa",
            "listener_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:589736534170:listener/app/ecs-demo-alb/bd102969d4e4a194/a9ad5c3101412a9e",
            "priority": 103,
            "region": "ap-southeast-1",
            "tags": {
              "Environment": "demo",
              "Name": "ecs-demo-listener-rules",
              "Project": "ecs-fargate-demo"
            },
            "tags_all": {
              "Environment": "demo",
              "Name": "ecs-demo-listener-rules",
              "Project": "ecs-fargate-demo"
            }
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:589736534170:listener-rule/app/ecs-demo-alb/bd102969d4e4a194/a9ad5c3101412a9e/22ccddc251e8c9aa"
          },
          "dependencies": [
            "aws_acm_certificate.alb_cert",
            "aws_acm_certificate_validation.alb_cert_validation",
            "aws_lb.ecs_alb",
            "aws_lb_listener.ecs_https_listener",
            "aws_lb_target_group.tg",
            "aws_route53_record.alb_cert_validation",
            "aws_security_group.ecs_sg",
            "data.aws_subnets.default",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ashtra",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:589736534170:targetgroup/tg-ashtra/d27ffd423059a1c3",
            "arn_suffix": "targetgroup/tg-ashtra/d27ffd423059a1c3",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:589736534170:targetgroup/tg-ashtra/d27ffd423059a1c3",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:ap-southeast-1:589736534170:loadbalancer/app/ecs-demo-alb/bd102969d4e4a194"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "tg-ashtra",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "ap-southeast-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Environment": "demo",
              "Name": "ecs-demo-tg",
              "Project": "ecs-fargate-demo"
            },
            "tags_all": {
              "Environment": "demo",
              "Name": "ecs-demo-tg",
              "Project": "ecs-fargate-demo"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-7231d814"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:589736534170:targetgroup/tg-ashtra/d27ffd423059a1c3"
          },
          "dependencies": [
            "data.aws_vpc.default"
          ]
        },
        {
          "index_key": "dash",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:589736534170:targetgroup/tg-dash/bcb465942a0bc1e7",
            "arn_suffix": "targetgroup/tg-dash/bcb465942a0bc1e7",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:589736534170:targetgroup/tg-dash/bcb465942a0bc1e7",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:ap-southeast-1:589736534170:loadbalancer/app/ecs-demo-alb/bd102969d4e4a194"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "tg-dash",
            "port": 3000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "ap-southeast-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Environment": "demo",
              "Name": "ecs-demo-tg",
              "Project": "ecs-fargate-demo"
            },
            "tags_all": {
              "Environment": "demo",
              "Name": "ecs-demo-tg",
              "Project": "ecs-fargate-demo"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-7231d814"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:589736534170:targetgroup/tg-dash/bcb465942a0bc1e7"
          },
          "dependencies": [
            "data.aws_vpc.default"
          ]
        },
        {
          "index_key": "httpd",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:589736534170:targetgroup/tg-httpd/0b1fb352a360e14c",
            "arn_suffix": "targetgroup/tg-httpd/0b1fb352a360e14c",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:589736534170:targetgroup/tg-httpd/0b1fb352a360e14c",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:ap-southeast-1:589736534170:loadbalancer/app/ecs-demo-alb/bd102969d4e4a194"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "tg-httpd",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "ap-southeast-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Environment": "demo",
              "Name": "ecs-demo-tg",
              "Project": "ecs-fargate-demo"
            },
            "tags_all": {
              "Environment": "demo",
              "Name": "ecs-demo-tg",
              "Project": "ecs-fargate-demo"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-7231d814"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:589736534170:targetgroup/tg-httpd/0b1fb352a360e14c"
          },
          "dependencies": [
            "data.aws_vpc.default"
          ]
        },
        {
          "index_key": "nginx",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:589736534170:targetgroup/tg-nginx/9ab6f4050d045963",
            "arn_suffix": "targetgroup/tg-nginx/9ab6f4050d045963",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:589736534170:targetgroup/tg-nginx/9ab6f4050d045963",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:ap-southeast-1:589736534170:loadbalancer/app/ecs-demo-alb/bd102969d4e4a194"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "tg-nginx",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "ap-southeast-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Environment": "demo",
              "Name": "ecs-demo-tg",
              "Project": "ecs-fargate-demo"
            },
            "tags_all": {
              "Environment": "demo",
              "Name": "ecs-demo-tg",
              "Project": "ecs-fargate-demo"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-7231d814"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:589736534170:targetgroup/tg-nginx/9ab6f4050d045963"
          },
          "dependencies": [
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:589736534170:security-group/sg-0f6668e3c9f805bad",
            "description": "Allow HTTP",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f6668e3c9f805bad",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "ecs-fargate-sg",
            "name_prefix": "",
            "owner_id": "589736534170",
            "region": "ap-southeast-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "demo",
              "Name": "ecs-fargate-sg",
              "Project": "ecs-fargate-demo"
            },
            "tags_all": {
              "Environment": "demo",
              "Name": "ecs-fargate-sg",
              "Project": "ecs-fargate-demo"
            },
            "timeouts": null,
            "vpc_id": "vpc-7231d814"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "589736534170",
            "id": "sg-0f6668e3c9f805bad",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ecr_api",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:589736534170:vpc-endpoint/vpce-053c4671a5271ab6e",
            "dns_entry": [
              {
                "dns_name": "vpce-053c4671a5271ab6e-p35fkwr1.api.ecr.ap-southeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z18LLCSTV4NVNL"
              },
              {
                "dns_name": "vpce-053c4671a5271ab6e-p35fkwr1-ap-southeast-1b.api.ecr.ap-southeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z18LLCSTV4NVNL"
              },
              {
                "dns_name": "vpce-053c4671a5271ab6e-p35fkwr1-ap-southeast-1a.api.ecr.ap-southeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z18LLCSTV4NVNL"
              },
              {
                "dns_name": "vpce-053c4671a5271ab6e-p35fkwr1-ap-southeast-1c.api.ecr.ap-southeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z18LLCSTV4NVNL"
              },
              {
                "dns_name": "api.ecr.ap-southeast-1.amazonaws.com",
                "hosted_zone_id": "Z04934832EGQ7AVXB76J2"
              },
              {
                "dns_name": "ecr.ap-southeast-1.api.aws",
                "hosted_zone_id": "Z0492354V9T0JQFM88WY"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-053c4671a5271ab6e",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0570230f8a3162984",
              "eni-08bcc8a1deee99fc5",
              "eni-0a48bcde9e0090805"
            ],
            "owner_id": "589736534170",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "ap-southeast-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-0f6668e3c9f805bad"
            ],
            "service_name": "com.amazonaws.ap-southeast-1.ecr.api",
            "service_region": "ap-southeast-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "172.31.2.254",
                "subnet_id": "subnet-ba1198e3"
              },
              {
                "ipv4": "172.31.30.166",
                "subnet_id": "subnet-c6924fa0"
              },
              {
                "ipv4": "172.31.35.137",
                "subnet_id": "subnet-0b4e8c43"
              }
            ],
            "subnet_ids": [
              "subnet-0b4e8c43",
              "subnet-ba1198e3",
              "subnet-c6924fa0"
            ],
            "tags": {
              "Environment": "demo",
              "Name": "ecs-fargate-demo-ecr-api-endpoint"
            },
            "tags_all": {
              "Environment": "demo",
              "Name": "ecs-fargate-demo-ecr-api-endpoint"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-7231d814"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.ecs_sg",
            "data.aws_subnets.default",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ecr_dkr",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:589736534170:vpc-endpoint/vpce-0f8adcbe2e28bee16",
            "dns_entry": [
              {
                "dns_name": "vpce-0f8adcbe2e28bee16-ufhwbwi0.dkr.ecr.ap-southeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z18LLCSTV4NVNL"
              },
              {
                "dns_name": "vpce-0f8adcbe2e28bee16-ufhwbwi0-ap-southeast-1c.dkr.ecr.ap-southeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z18LLCSTV4NVNL"
              },
              {
                "dns_name": "vpce-0f8adcbe2e28bee16-ufhwbwi0-ap-southeast-1b.dkr.ecr.ap-southeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z18LLCSTV4NVNL"
              },
              {
                "dns_name": "vpce-0f8adcbe2e28bee16-ufhwbwi0-ap-southeast-1a.dkr.ecr.ap-southeast-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z18LLCSTV4NVNL"
              },
              {
                "dns_name": "dkr.ecr.ap-southeast-1.amazonaws.com",
                "hosted_zone_id": "Z049329813I6VFTR7HI7O"
              },
              {
                "dns_name": "*.dkr.ecr.ap-southeast-1.amazonaws.com",
                "hosted_zone_id": "Z049329813I6VFTR7HI7O"
              },
              {
                "dns_name": "dkr-ecr.ap-southeast-1.on.aws",
                "hosted_zone_id": "Z049326117TH2GRJA22ZQ"
              },
              {
                "dns_name": "*.dkr-ecr.ap-southeast-1.on.aws",
                "hosted_zone_id": "Z049326117TH2GRJA22ZQ"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0f8adcbe2e28bee16",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-00c7b56eafc021b56",
              "eni-0399da51eee4046b8",
              "eni-0f401dfeaf61a7fbf"
            ],
            "owner_id": "589736534170",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "ap-southeast-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-0f6668e3c9f805bad"
            ],
            "service_name": "com.amazonaws.ap-southeast-1.ecr.dkr",
            "service_region": "ap-southeast-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "172.31.11.240",
                "subnet_id": "subnet-ba1198e3"
              },
              {
                "ipv4": "172.31.20.90",
                "subnet_id": "subnet-c6924fa0"
              },
              {
                "ipv4": "172.31.32.27",
                "subnet_id": "subnet-0b4e8c43"
              }
            ],
            "subnet_ids": [
              "subnet-0b4e8c43",
              "subnet-ba1198e3",
              "subnet-c6924fa0"
            ],
            "tags": {
              "Environment": "demo",
              "Name": "ecs-fargate-demo-ecr-dkr-endpoint"
            },
            "tags_all": {
              "Environment": "demo",
              "Name": "ecs-fargate-demo-ecr-dkr-endpoint"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-7231d814"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.ecs_sg",
            "data.aws_subnets.default",
            "data.aws_vpc.default"
          ]
        }
      ]
    }
  ]
}